Fix syntax error in CheckOutController